# parallel-game-of-life

./: CMakeLists.txt  README.md  main.cpp
src/: grid.cpp  grid.h  logic.cpp  logic.h  main.cpp
src/grid/: grid.cpp  grid.h
src/logic/: ComparisonSImulation.h  ComparisonSimulation.h  ParallelSimulation.h  SequentialSimulation.h  logic.h  simulation.cpp  simulation.h
